@@ -53,10 +53,6 @@ struct fake_peer
 {
 	fake_peer(simulation& sim, char const* ip)
 		: m_ios(sim, asio::ip::address::from_string(ip))
-		, m_acceptor(m_ios)
-		, m_in_socket(m_ios)
-		, m_out_socket(m_ios)
-		, m_tripped(false)
 	{
 		boost::system::error_code ec;
 		m_acceptor.open(asio::ip::tcp::v4(), ec);
@@ -177,20 +173,20 @@ private:
 	char m_out_buffer[300];
 
 	asio::io_service m_ios;
-	asio::ip::tcp::acceptor m_acceptor;
-	asio::ip::tcp::socket m_in_socket;
-	asio::ip::tcp::socket m_out_socket;
-	bool m_tripped;
+	asio::ip::tcp::acceptor m_acceptor{m_ios};
+	asio::ip::tcp::socket m_in_socket{m_ios};
+	asio::ip::tcp::socket m_out_socket{m_ios};
+	bool m_tripped = false;
 
 	std::vector<char> m_send_buffer;
 };
 
-struct fake_node
+struct udp_server
 {
-	fake_node(simulation& sim, char const* ip, int port = 6881)
+	udp_server(simulation& sim, char const* ip, int port
+		, std::function<std::vector<char>(char const*, int)> handler)
 		: m_ios(sim, asio::ip::address::from_string(ip))
-		, m_socket(m_ios)
-		, m_tripped(false)
+		, m_handler(handler)
 	{
 		boost::system::error_code ec;
 		m_socket.open(asio::ip::udp::v4(), ec);
@@ -198,31 +194,73 @@ struct fake_node
 		m_socket.bind(asio::ip::udp::endpoint(asio::ip::address_v4::any(), port), ec);
 		TEST_CHECK(!ec);
 
-		fprintf(stderr, "fake_node::async_read_some\n");
-		m_socket.async_receive(boost::asio::buffer(m_in_buffer)
-			, [&] (boost::system::error_code const& ec, size_t bytes_transferred)
-		{
-			fprintf(stderr, "fake_node::async_read_some callback. ec: %s transferred: %d\n"
-				, ec.message().c_str(), int(bytes_transferred));
-			if (ec) return;
+		m_socket.io_control(lt::udp::socket::non_blocking_io(true));
 
+		std::printf("udp_server::async_read_some\n");
+		using namespace std::placeholders;
+		m_socket.async_receive_from(boost::asio::buffer(m_in_buffer)
+			, m_from, 0, std::bind(&udp_server::on_read, this, _1, _2));
+	}
+
+	void close() { m_socket.close(); }
+
+private:
+
+	void on_read(boost::system::error_code const& ec, size_t bytes_transferred)
+	{
+		std::printf("udp_server::async_read_some callback. ec: %s transferred: %d\n"
+			, ec.message().c_str(), int(bytes_transferred));
+		if (ec) return;
+
+		std::vector<char> send_buffer = m_handler(m_in_buffer.data(), int(bytes_transferred));
+
+		if (!send_buffer.empty())
+		{
+			lt::error_code err;
+			m_socket.send_to(boost::asio::buffer(send_buffer), m_from, 0, err);
+			if (err)
+			{
+				std::printf("send_to FAILED: %s\n", err.message().c_str());
+			}
+			else
+			{
+				std::printf("udp_server responding with %d bytes\n"
+					, int(send_buffer.size()));
+			}
+		}
+
+		std::printf("udp_server::async_read_some\n");
+		using namespace std::placeholders;
+		m_socket.async_receive_from(boost::asio::buffer(m_in_buffer)
+			, m_from, 0, std::bind(&udp_server::on_read, this, _1, _2));
+	}
+
+	std::array<char, 1500> m_in_buffer;
+
+	asio::io_service m_ios;
+	asio::ip::udp::socket m_socket{m_ios};
+	asio::ip::udp::endpoint m_from;
+
+	std::function<std::vector<char>(char const*, int)> m_handler;
+};
+
+struct fake_node : udp_server
+{
+	fake_node(simulation& sim, char const* ip, int port = 6881)
+		: udp_server(sim, ip, port, [&](char const* incoming, int size)
+		{
 			lt::bdecode_node n;
 			boost::system::error_code err;
-			int const ret = bdecode(m_in_buffer.data(), m_in_buffer.data() + bytes_transferred
-				, n, err, nullptr, 10, 200);
+			int const ret = bdecode(incoming, incoming + size, n, err, nullptr, 10, 200);
 			TEST_EQUAL(ret, 0);
 
-			m_incoming_packets.emplace_back(m_in_buffer.data(), m_in_buffer.data() + bytes_transferred);
+			m_incoming_packets.emplace_back(incoming, incoming + size);
 
 			// TODO: ideally we would validate the DHT message
 			m_tripped = true;
-		});
-	}
-
-	void close()
-	{
-		m_socket.close();
-	}
+			return std::vector<char>();
+		})
+	{}
 
 	bool tripped() const { return m_tripped; }
 
@@ -231,15 +269,8 @@ struct fake_node
 
 private:
 
-	std::array<char, 300> m_in_buffer;
-
 	std::vector<std::vector<char>> m_incoming_packets;
-
-	asio::io_service m_ios;
-	asio::ip::udp::socket m_socket;
-	bool m_tripped;
-
-	std::vector<char> m_send_buffer;
+	bool m_tripped = false;
 };
 
 inline void add_fake_peers(lt::torrent_handle h)
